--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,649 +1,62 @@
-
-
-@media (min-width:768px) {
-  .page__body {
-    background-size: 768px auto;
-    background-position: calc(50% + 520px) 200px
-  }
+.main{
+  width: 55%;
+  margin: 100px auto;
 }
-
-@media (min-width:1024px) {
-  .page__body {
-    background-position: calc(50% - 100px) 331px
-  }
+.text{
+  font-size: 2.5rem;
 }
-
-@media (min-width:1280px) {
-  .page__body {
-    background-size: auto;
-    background-position: calc(50% - -30px) 175px
-  }
+.text2{
+  margin-top: 35px;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
-
-@media (min-width:1440px) {
-  .page__body {
-    background-position: calc(50% - 30px) 0
-  }
+.text3{
+  margin-top: 10px;
+  font-size: 1.2rem;
 }
-
-.page__container {
-  overflow: hidden;
-  position: relative;
-  min-height: 700px
-}
-
-@media (min-width:768px) {
-  .page__container {
-    min-height: 840px
-  }
-}
-
-@media (min-width:1280px) {
-  .page__container {
-    min-height: 1080px
-  }
-}
-
-.page__container::before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 50px;
-  transform: translateX(-50%);
-  width: 338px;
-  height: 616px;
-  pointer-events: none
-}
-
-@media (min-width:768px) {
-  .page__container::before {
-    top: 73px;
-    width: 703px;
-    height: 735px;
-  }
-}
-
-@media (min-width:1024px) {
-  .page__container::before {
-    top: 170px;
-    width: 1696px;
-    height: 952px;
-    margin-left: 35px
-  }
-}
-
-@media (min-width:1280px) {
-  .page__container::before {
-    top: 97px;
-    width: 1696px;
-    height: 952px;
-    margin-left: -60px
-  }
-}
-
-@media (min-width:1440px) {
-  .page__container::before {
-    margin-left: -80px
-  }
-}
-
-@media (min-width:768px) {
-  .page__content {
-    padding: 0 calc(50% - 350px)
-  }
-}
-
-@media (min-width:1280px) {
-  .page__content {
-    padding: 0 calc(50% - 600px)
-  }
-}
-
-.page__logo {
-  display: flex;
-  height: 100px;
-  cursor: pointer
-}
-
-@media (min-width:768px) {
-  .page__logo {
-    height: 100px
-  }
-}
-
-@media (min-width:1024px) {
-  .page__logo {
-    height: 140px;
-  }
-}
-
-.page__text {
-  background-repeat: no-repeat;
-  width: 290px;
-  height: 486px;
-  position: absolute;
-  left: 50%;
-  top: 139px;
-  transform: translateX(-50%);
-  margin-left: -15px
-}
-
-@media (min-width:768px) {
-  .page__text {
-    background-size: contain;
-    width: 498px;
-    height: 493px;
-    top: 178px;
-    margin-left: -100px
-  }
-}
-
-@media (min-width:1024px) {
-  .page__text {
-    top: 210px
-  }
-}
-
-@media (min-width:1280px) {
-  .page__text {
-    width: 525px;
-    height: 520px;
-    top: 200px;
-    margin-left: -95px
-  }
-}
-
-.page__button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 250px;
-  height: 80px;
-  border-radius: 45px;
-  font-size: 28px;
+.text4{
+  margin-top: 30px;
   font-weight: bold;
-  color: #fff;
-  text-decoration: none;
-  background: linear-gradient(96.15deg, #df5813 4.81%, #bf017e 23.59%, #793ba5 59.58%, #4930dc 94.82%);
-  margin: 250px auto 0;
-  position: relative;
-  z-index: 2;
-  left: -30px;
-  animation: page__button 4s linear alternate infinite;
-  cursor: pointer
+  font-size: 1rem;
 }
 
-@media (min-width:768px) {
-  .page__button {
-    margin-top: 600px;
-    left: -100px;
-    width: 380px;
-    height: 120px;
-    border-radius: 60px;
-    font-size: 42px
-  }
+.text5{
+  margin-top: 10px;
+  font-size: 0.9rem;
 }
-
-@media (min-width:1280px) {
-  .page__button {
-    margin-top: 610px;
-    left: -95px;
-    width: 444px;
-    height: 138px;
-    border-radius: 69px;
-    font-size: 44px
-  }
+.image2 {
+  width: 420px;
+  height: 80px
 }
-
-.page__button:hover {
-  background: linear-gradient(0, rgba(36, 55, 122, 0.5), rgba(36, 55, 122, 0.5)), linear-gradient(96.15deg, #df5813 4.81%, #bf017e 23.59%, #793ba5 59.58%, #4930dc 94.82%)
-}
-
-.page__button:active {
-  background: linear-gradient(98.14deg, #f00 7.17%, #df5813 72.81%, #4c2ff4 102.88%)
-}
-
-@-moz-keyframes page__button {
-
-  10%,
-  30% {
-    transform: scale(1.05)
-  }
-
-  20%,
-  40%,
-  60%,
-  100% {
-    transform: scale(1)
-  }
-
-  50% {
-    transform: scale(1.1)
-  }
-}
-
-@-webkit-keyframes page__button {
-
-  10%,
-  30% {
-    transform: scale(1.05)
-  }
-
-  20%,
-  40%,
-  60%,
-  100% {
-    transform: scale(1)
-  }
-
-  50% {
-    transform: scale(1.1)
-  }
-}
-
-@-o-keyframes page__button {
-
-  10%,
-  30% {
-    transform: scale(1.05)
-  }
-
-  20%,
-  40%,
-  60%,
-  100% {
-    transform: scale(1)
-  }
-
-  50% {
-    transform: scale(1.1)
-  }
-}
-
-@keyframes page__button {
-
-  10%,
-  30% {
-    transform: scale(1.05)
-  }
-
-  20%,
-  40%,
-  60%,
-  100% {
-    transform: scale(1)
-  }
-
-  50% {
-    transform: scale(1.1)
-  }
-}
-
-.page__man {
-  background-size: cover;
-  width: 278px;
-  height: 334px;
+.checkbox{
+  left: 14px;
+  top: 24%;            
+  width: 40px;
+  height: 35px;
+  cursor: pointer;
   position: absolute;
-  left: calc(50% - 30px);
-  top: 57px;
-  pointer-events: none
 }
-
-@media (min-width:768px) {
-  .page__man {
-    width: 430px;
-    height: 520px;
-    top: 80px;
-    transform: translateX(75px)
+@media screen and (max-width: 600px) {
+  .main{
+    width: 85%;
+  }
+  .text{
+    font-size: 1.8rem;
+  }
+  .image2{
+    width: 100%;
+  }
+  .checkbox{
+    display: block !important;
+    left: 5px;
+    top: 26%;
+    width: 13%;
+    height: 35px;
   }
 }
-
-@media (min-width:1024px) {
-  .page__man {
-    width: 720px;
-    height: 881px;
-    top: -15px;
-    transform: translateX(25px)
+@media screen and  (max-width: 1024px) and (min-width: 601px) {
+  
+  .checkbox{
+    display: none;
   }
-}
-
-@media (min-width:1280px) {
-  .page__man {
-    width: 900px;
-    height: 1080px;
-    top: -17px;
-    transform: translateX(20px)
-  }
-}
-
-.page__textcontainer {
-  font-family: 'Noto Sans JP';
-  max-width: 1176px;
-  margin: 40px auto 0;
-  padding: 0 16px;
-  text-align: center;
-  height: 160px;
-  position: relative;
-  overflow: hidden
-}
-
-@media (min-width:768px) {
-  .page__textcontainer {
-    padding: 0 30px
-  }
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer {
-    margin-top: 240px;
-    height: 260px
-  }
-}
-
-@media (min-width:1280px) {
-  .page__textcontainer {
-    margin-top: 40px
-  }
-}
-
-.page__textcontainer--open {
-  height: auto
-}
-
-.page__textcontainer h1 {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.2;
-  background: linear-gradient(180deg, #893dae 34.38%, #5641f9 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  padding: 40px 0 16px
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer h1 {
-    font-size: 40px
-  }
-}
-
-.page__textcontainer h2 {
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 1.4;
-  color: #b513a7;
-  padding: 40px 0 16px
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer h2 {
-    font-size: 32px
-  }
-}
-
-.page__textcontainer h2.titlelarge {
-  font-size: 26px
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer h2.titlelarge {
-    font-size: 32px
-  }
-}
-
-.page__textcontainer h2.titlesmall {
-  font-size: 16px
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer h2.titlesmall {
-    font-size: 32px
-  }
-}
-
-.page__textcontainer h3 {
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 1.4;
-  color: #b513a7;
-  padding: 40px 10px 16px
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer h3 {
-    font-size: 32px
-  }
-}
-
-.page__textcontainer h3.titleblack {
-  color: #000;
-  font-size: 16px;
-  padding: 16px 0
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer h3.titleblack {
-    font-size: 28px
-  }
-}
-
-.page__textcontainer h3.titleblacksmall {
-  font-size: 12px
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer h3.titleblacksmall {
-    font-size: 28px
-  }
-}
-
-.page__textcontainer p {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.4
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer p {
-    font-size: 24px
-  }
-}
-
-.page__textcontainer .list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 12px 0
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .list {
-    flex-direction: row;
-    justify-content: space-between
-  }
-}
-
-.page__textcontainer .list li {
-  font-size: 17px;
-  line-height: 1.5;
-  position: relative;
-  margin: 5px 0;
-  padding-left: 20px
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .list li {
-    font-size: 23px;
-    padding-left: 30px
-  }
-}
-
-.page__textcontainer .list li:before {
-  content: "";
-  position: absolute;
-  top: 7px;
-  left: 0;
-  width: 15px;
-  height: 15px;
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .list li:before {
-    width: 20px;
-    height: 20px;
-    top: 10px
-  }
-}
-
-.page__textcontainer .listcustom {
-  margin: 16px 0 0
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .listcustom {
-    flex-direction: column;
-    justify-content: flex-start
-  }
-}
-
-.page__textcontainer .listcustom li {
-  font-size: 14px;
-  margin: 6px 0
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .listcustom li {
-    font-size: 24px
-  }
-}
-
-.page__textcontainer .listcustom li:before {
-  top: 5px
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .listcustom li:before {
-    top: 10px
-  }
-}
-
-.page__textcontainer .list--margin {
-  margin-bottom: 16px
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .listflex {
-    flex-direction: row;
-    justify-content: space-around
-  }
-}
-
-.page__textcontainer .table {
-  border: 2px solid #b513a7;
-  border-collapse: collapse;
-  font-size: 14px;
-  margin: 16px 0 0
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .table {
-    border-width: 4px
-  }
-}
-
-.page__textcontainer .table td,
-.page__textcontainer .table th {
-  border: 2px solid #b513a7;
-  width: 50%;
-  padding: 4px;
-  text-align: center
-}
-
-@media (min-width:1024px) {
-
-  .page__textcontainer .table td,
-  .page__textcontainer .table th {
-    border-width: 4px
-  }
-}
-
-.page__textcontainer .table a {
-  color: #000;
-  text-decoration: none
-}
-
-.page__textcontainer .tablecustom {
-  margin-bottom: 16px;
-  margin-left: auto;
-  margin-right: auto
-}
-
-.page__textcontainer .tablecustom td,
-.page__textcontainer .tablecustom th {
-  width: 33.33%;
-  height: 43px;
-  padding: 0 2px
-}
-
-.page__textcontainer .tablecustom td p,
-.page__textcontainer .tablecustom th p {
-  line-height: 1.3
-}
-
-.page__textcontainer .tablecustom h3 {
-  font-size: 15px;
-  padding: 0
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .tablecustom h3 {
-    font-size: 23px
-  }
-}
-
-.page__textcontainer .textlarge {
-  font-size: 17px;
-  line-height: 1.4
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer .textlarge {
-    font-size: 24px
-  }
-}
-
-.page__textcontainer ol {
-  margin: 16px 0
-}
-
-.page__textcontainer ol li {
-  font-size: 14px;
-  line-height: 1.4
-}
-
-@media (min-width:1024px) {
-  .page__textcontainer ol li {
-    font-size: 24px
-  }
-}
-
-.page__textcontainer-arrow {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 123px;
-  background: url("/public/images/arrow.svg") center 60%/40px auto no-repeat, linear-gradient(rgba(255, 255, 255, 0) 0%, #fff 78.68%)
-}
-
-@media (min-width:1024px) {
-  .page__textcontainerarrow {
-    background-size: 68px auto;
-    height: 260px
-  }
-}
-
-.page__textcontainerarrowopen {
-  transform: rotate(180deg);
-  position: static
 }
